refactor(lotto): modify of static method -> constructor