@@ -8,6 +8,7 @@ import org.junit.jupiter.params.provider.ValueSource;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Stream;
 
 import static lotto.model.Lotto.LOTTO_NUMBERS_NOT_ALLOWED_DUPLICATED;
 import static lotto.model.Lotto.LOTTO_NUMBERS_SIZE_ALLOWED_ONLY_6;
@@ -21,19 +22,19 @@ public class LottoTest {
     @Test
     void 로또번호목록과_보너스번호를_저장한다() {
         assertThatNoException().isThrownBy(() -> {
-            Lotto lotto = Lotto.of(
-                    () -> List.of(of(6), of(9), of(17), of(28), of(39), of(45))
+            Lotto lotto = new Lotto(
+                    () -> Arrays.asList(of(6), of(9), of(17), of(28), of(39), of(45))
             );
         });
     }
 
     @Test
     void 로또는_로또번호순서와_상관없이_정렬된_값과_같다() {
-        List<LottoNumber> actual = Lotto.of(
-                        () -> List.of(of(39), of(17), of(6), of(9), of(28), of(45))
+        List<LottoNumber> actual = new Lotto(
+                        () -> Arrays.asList(of(39), of(17), of(6), of(9), of(28), of(45))
                 )
                 .numbers();
-        List<LottoNumber> expected = List.of(of(6), of(9), of(17), of(28), of(39), of(45));
+        List<LottoNumber> expected = Arrays.asList(of(6), of(9), of(17), of(28), of(39), of(45));
 
         assertThat(actual).isEqualTo(expected);
     }
@@ -41,8 +42,8 @@ public class LottoTest {
     @Test
     void 로또번호는_중복되면_오류() {
         assertThatThrownBy(() -> {
-            Lotto duplicatedLotto = Lotto.of(
-                    () -> List.of(of(6), of(6), of(17), of(28), of(39), of(45))
+            Lotto duplicatedLotto = new Lotto(
+                    () -> Arrays.asList(of(6), of(6), of(17), of(28), of(39), of(45))
             );
         }).isInstanceOf(IllegalArgumentException.class)
                 .hasMessage(LOTTO_NUMBERS_NOT_ALLOWED_DUPLICATED);
@@ -51,8 +52,8 @@ public class LottoTest {
     @Test
     void 로또번호목록은_반드시_6개가_저장되어야_한다() {
         assertThatThrownBy(() -> {
-            Lotto lottoNumbersSizeIsNotSix = Lotto.of(
-                    () -> List.of(of(6), of(17), of(28), of(39))
+            Lotto lottoNumbersSizeIsNotSix = new Lotto(
+                    () -> Arrays.asList(of(6), of(17), of(28), of(39))
             );
         }).isInstanceOf(IllegalArgumentException.class)
                 .hasMessage(LOTTO_NUMBERS_SIZE_ALLOWED_ONLY_6);
@@ -66,12 +67,12 @@ public class LottoTest {
     })
     void 로또_등수_없음(String numberStrings) {
         int[] numbers = convertStringToNumbers(numberStrings);
-        Lotto buy = Lotto.of(
-                () -> List.of(of(numbers[0]), of(numbers[1]), of(numbers[2]), of(numbers[3]), of(numbers[4]), of(numbers[5]))
+        Lotto buy = new Lotto(
+                () -> Arrays.asList(of(numbers[0]), of(numbers[1]), of(numbers[2]), of(numbers[3]), of(numbers[4]), of(numbers[5]))
         );
 
-        Lotto winningLotto = Lotto.of(
-                () -> List.of(of(1), of(2), of(3), of(4), of(5), of(6))
+        Lotto winningLotto = new Lotto(
+                () -> Arrays.asList(of(1), of(2), of(3), of(4), of(5), of(6))
         );
         LottoNumber bonusNumber = of(numbers[6]);
         Winning winning = Winning.of(winningLotto, bonusNumber);
@@ -89,11 +90,11 @@ public class LottoTest {
     })
     void 로또5등(String numberStrings) {
         int[] numbers = convertStringToNumbers(numberStrings);
-        Lotto buy = Lotto.of(
-                () -> List.of(of(numbers[0]), of(numbers[1]), of(numbers[2]), of(numbers[3]), of(numbers[4]), of(numbers[5]))
+        Lotto buy = new Lotto(
+                () -> Arrays.asList(of(numbers[0]), of(numbers[1]), of(numbers[2]), of(numbers[3]), of(numbers[4]), of(numbers[5]))
         );
-        Lotto winningLotto = Lotto.of(
-                () -> List.of(of(1), of(2), of(3), of(4), of(5), of(6))
+        Lotto winningLotto = new Lotto(
+                () -> Arrays.asList(of(1), of(2), of(3), of(4), of(5), of(6))
         );
         LottoNumber bonusNumber = of(numbers[6]);
         Winning winning = Winning.of(winningLotto, bonusNumber);
@@ -111,11 +112,11 @@ public class LottoTest {
     })
     void 로또4등(String numberStrings) {
         int[] numbers = convertStringToNumbers(numberStrings);
-        Lotto buy = Lotto.of(
-                () -> List.of(of(numbers[0]), of(numbers[1]), of(numbers[2]), of(numbers[3]), of(numbers[4]), of(numbers[5]))
+        Lotto buy = new Lotto(
+                () -> Arrays.asList(of(numbers[0]), of(numbers[1]), of(numbers[2]), of(numbers[3]), of(numbers[4]), of(numbers[5]))
         );
-        Lotto winningLotto = Lotto.of(
-                () -> List.of(of(1), of(2), of(3), of(4), of(5), of(6))
+        Lotto winningLotto = new Lotto(
+                () -> Arrays.asList(of(1), of(2), of(3), of(4), of(5), of(6))
         );
         LottoNumber bonusNumber = of(numbers[6]);
         Winning winning = Winning.of(winningLotto, bonusNumber);
@@ -133,11 +134,11 @@ public class LottoTest {
     })
     void 로또3등(String numberStrings) {
         int[] numbers = convertStringToNumbers(numberStrings);
-        Lotto buy = Lotto.of(
-                () -> List.of(of(numbers[0]), of(numbers[1]), of(numbers[2]), of(numbers[3]), of(numbers[4]), of(numbers[5]))
+        Lotto buy = new Lotto(
+                () -> Arrays.asList(of(numbers[0]), of(numbers[1]), of(numbers[2]), of(numbers[3]), of(numbers[4]), of(numbers[5]))
         );
-        Lotto winningLotto = Lotto.of(
-                () -> List.of(of(1), of(2), of(3), of(4), of(5), of(6))
+        Lotto winningLotto = new Lotto(
+                () -> Arrays.asList(of(1), of(2), of(3), of(4), of(5), of(6))
         );
         LottoNumber bonusNumber = of(numbers[6]);
         Winning winning = Winning.of(winningLotto, bonusNumber);
@@ -155,11 +156,11 @@ public class LottoTest {
     })
     void 로또2등(String numberStrings) {
         int[] numbers = convertStringToNumbers(numberStrings);
-        Lotto buy = Lotto.of(
-                () -> List.of(of(numbers[0]), of(numbers[1]), of(numbers[2]), of(numbers[3]), of(numbers[4]), of(numbers[5]))
+        Lotto buy = new Lotto(
+                () -> Arrays.asList(of(numbers[0]), of(numbers[1]), of(numbers[2]), of(numbers[3]), of(numbers[4]), of(numbers[5]))
         );
-        Lotto winningLotto = Lotto.of(
-                () -> List.of(of(1), of(2), of(3), of(4), of(5), of(6))
+        Lotto winningLotto = new Lotto(
+                () -> Arrays.asList(of(1), of(2), of(3), of(4), of(5), of(6))
         );
         LottoNumber bonusNumber = of(numbers[6]);
         Winning winning = Winning.of(winningLotto, bonusNumber);
@@ -176,11 +177,11 @@ public class LottoTest {
     })
     void 로또1등(String numberStrings) {
         int[] numbers = convertStringToNumbers(numberStrings);
-        Lotto buy = Lotto.of(
-                () -> List.of(of(numbers[0]), of(numbers[1]), of(numbers[2]), of(numbers[3]), of(numbers[4]), of(numbers[5]))
+        Lotto buy = new Lotto(
+                () -> Arrays.asList(of(numbers[0]), of(numbers[1]), of(numbers[2]), of(numbers[3]), of(numbers[4]), of(numbers[5]))
         );
-        Lotto winningLotto = Lotto.of(
-                () -> List.of(of(1), of(2), of(3), of(4), of(5), of(6))
+        Lotto winningLotto = new Lotto(
+                () -> Arrays.asList(of(1), of(2), of(3), of(4), of(5), of(6))
         );
         LottoNumber bonusNumber = of(numbers[6]);
         Winning winning = Winning.of(winningLotto, bonusNumber);
