@@ -6,6 +6,7 @@ import lotto.model.enums.Ranking;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -21,13 +22,13 @@ public class ResultTest {
     void setUp() {
         this.buyer = Buyer.of(
                 3,
-                new BuyerFixtureNumberCreator(List.of(
-                        List.of(of(8), of(21), of(23), of(41), of(42), of(43)),
-                        List.of(of(8), of(21), of(23), of(41), of(42), of(44)),
-                        List.of(of(1), of(8), of(11), of(31), of(41), of(42))
+                new BuyerFixtureNumberCreator(Arrays.asList(
+                        Arrays.asList(of(8), of(21), of(23), of(41), of(42), of(43)),
+                        Arrays.asList(of(8), of(21), of(23), of(41), of(42), of(44)),
+                        Arrays.asList(of(1), of(8), of(11), of(31), of(41), of(42))
                 )));
-        Lotto winningLotto = Lotto.of(
-                () -> List.of(of(8), of(21), of(23), of(41), of(42), of(43))
+        Lotto winningLotto = new Lotto(
+                () -> Arrays.asList(of(8), of(21), of(23), of(41), of(42), of(43))
         );
         LottoNumber bonusNumber = of(44);
         this.winning = Winning.of(winningLotto, bonusNumber);
