@@ -4,6 +4,7 @@ import lotto.model.dto.LottoNumber;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.Test;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static lotto.model.Winning.INVALID_BONUS_NUMBER;
@@ -12,7 +13,7 @@ import static lotto.model.dto.LottoNumber.of;
 public class WinningTest {
     @Test
     void 생성() {
-        Lotto winningLotto = Lotto.of(() -> List.of(of(1), of(2), of(3), of(4), of(5), of(6)));
+        Lotto winningLotto = new Lotto(() -> Arrays.asList(of(1), of(2), of(3), of(4), of(5), of(6)));
         LottoNumber bonusNumber = of(7);
 
         Winning winning = Winning.of(winningLotto, bonusNumber);
@@ -25,7 +26,7 @@ public class WinningTest {
 
     @Test
     void 당첨번호목록_보너스번호_중복() {
-        Lotto winningLotto = Lotto.of(() -> List.of(of(1), of(2), of(3), of(4), of(5), of(6)));
+        Lotto winningLotto = new Lotto(() -> Arrays.asList(of(1), of(2), of(3), of(4), of(5), of(6)));
         LottoNumber bonusNumber = of(6);
         Assertions.assertThatThrownBy(() -> {
                     Winning duplicatedWinning = Winning.of(winningLotto, bonusNumber);
